# firehose

./: README.md  client.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-lint.txt  requirements-test.txt  setup.cfg
.github/workflows/: main.yml
firehose/: client.py  constants.py  exceptions.py
scripts/: echo-server.py
spigot/: __init__.py  __main__.py  client.py  cmd.py  connection.py  message.py  response.py  types.py
spigot/.github/workflows/: main.yml
tests/: conftest.py  test_client.py  test_client_async.py  test_connection_async.py  test_message.py
