[project]
name = "spigot"
version = "0.1.0"
description = "Trivial python async network client"
authors = [
  {name = "Aaron Sykes", email = "aaron@aaronsykes.com" }
]
requires-python = ">=3.6"

[project.urls]
respository = "https://github.com/asyks/spigot"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
