[options]
packages = spigot, scripts

[flake8]
max-line-length = 88
ignore =
  E203,  # E203: whitespace before ':' (defer to black)
  E231,  # E231: missing whitespace after ',' (defer to black)
  E501,  # E501: line length (defer to black)
  W503,  # W503: break before binary operators (defer to black)
